--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
 body{
 	background-color: grey;
 }
+
+.cool{
+	width: 100px;
+	height: 20px;
+	background-color: purple
+	transaction: background-color 1s;
+}
+
+.cool.red{
+	background-color: red
+}
