--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 	width: 100px;
 	height: 20px;
 	background-color: purple
-	transaction: background-color 1s;
+	transition: background-color 1s;
 }
 
 .cool.red{
