--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 .cool{
 	width: 100px;
 	height: 100px;
-	background-color: green
+	background-color: green;
 	transition: background-color 1s;
 }
 
