--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
 }
 
 .cool{
+	display: block;
 	width: 100px;
 	height: 100px;
 	background-color: green;
@@ -10,5 +11,6 @@ body{
 }
 
 .cool.red{
+	display: block;
 	background-color: red;
 }
